# AnchorSecurityTemplate

./: Anchor.toml  CHEAT_SHEET.md  Cargo.toml  DEEP_DIVE.md  GLOSSARY.md  LICENSE  PINOCCHIO.md  README.md  RESOURCES.md  SECURITY.md
programs/01-ownership-validation/: Cargo.toml  README.md
programs/01-ownership-validation/src/: lib.rs
programs/02-signer-authorization/: Cargo.toml  README.md
programs/02-signer-authorization/src/: lib.rs
programs/03-account-data-matching/: Cargo.toml  README.md
programs/03-account-data-matching/src/: lib.rs
programs/04-arithmetic-safety/: Cargo.toml  README.md
programs/04-arithmetic-safety/src/: lib.rs
programs/05-cpi-reentrancy/: Cargo.toml  README.md
programs/05-cpi-reentrancy/src/: lib.rs
tests/: ownership-validation.ts
